kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    networking.gke.io/managed-certificates: "managed-cert"
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https-config"
spec:
  rules:
  - host: clinicalassistant.ai
    http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: fastapi-service
            port:
              number: 80
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: clinical-assistant-service
            port:
              number: 80
  # tls:
  # - hosts:
  #   - clinicalassistant.ai
  #   secretName: managed-cert
